--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,4 +1,9 @@
-@import 'a';
-.hello {
-  color: red;
+html, body {
+  background-color: #333333;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  width: 100%;
+  height: 100%;
 }
